# OpenTaiko-Hub

./: CHANGELOG.md  CREDITS.md  README.md  dashy.ts  hubdefault.ts  my-custom-theme.ts  package-lock.json  package.json  pearl.ts  tailwind.config.js
.github/workflows/: autobuild.yaml
src/: app.css  app.html
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  fs.json  shell.json
src-tauri/settings/: theme.json  thememode.json
src-tauri/src/: main.rs
src/lib/components/: AssetStatusCell.svelte  HubVersionCheck.svelte  Secret.svelte  SecretButton.svelte  SongDifficultyChip.svelte  ToolCard.svelte
src/lib/pages/: AssetsTab.svelte  InformationTab.svelte  LinksTab.svelte  SaWTab.svelte  SecretTab.svelte  SongsTab.svelte  ThemesTab.svelte  ToolsTab.svelte
src/lib/themes/: 888.postcss  basicdark.postcss  basiclight.postcss  dashy.ts  deceiver.postcss  deceiver.ts  gleamingsky.postcss  gleamingsky.ts  highcontrast.postcss  hubdefault.postcss  onyx.ts  optkkun.ts  pearl.ts
src/lib/utils/: path.js
src/routes/: +layout.svelte  +page.svelte
src/stores/: stores.ts
